@@ -1,0 +1,17 @@
+title: ZFS arc L2 Cache: Hit Ratio and Size
+agents: solaris
+catalog: os/storage
+license: GPL
+distribution: check_mk
+description:
+ Reports the L2 cache hit ratio and the L2 cache size of ZFS.
+
+ This check is only for reporting and always returns {OK}.
+
+perfdata:
+ 2 values are reported:
+ l2_hit_ratio in percent and l2_size in bytes
+
+inventory:
+ Creates exactly on check on every machine having an L2 cache,
+ that means reporting an l2_size greater than 0.
