@@ -47,6 +47,7 @@
     * 0916 if: now able to configure minimum bandwidth limits
     * 0917 df checks: now able to show time left until disk full as perfometer and pnpgraph...
     * 0954 juniper_bgp_state: New Check for BGP status at Juniper Routers
+    * 0955 zfs_arc_cache, zfs_arc_cache.l2: New Checks for Hit Ratios and Sizes of ZFS
     * 0777 FIX: special agent emcvnx: did not work with security file authentication...
     * 0786 FIX: zfsget: fixed compatibility with older Solaris agents...
     * 0809 FIX: brocade_fcport: Fixed recently introduced problem with port speed detection
